fixes aspect ratio of Hero on mobile

--- a/src/components/Utility/Hero/Hero.module.scss
+++ b/src/components/Utility/Hero/Hero.module.scss
@@ -25,5 +25,9 @@
 }
 
 .Page {
-  min-height: 70vh;
+  min-height: 45vh;
+
+  @include min-width(768px) {
+    min-height: 70vh;
+  }
 }
